--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-router": "^3.1.6",
     "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
