--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-browser-geolocation": "^1.8.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
-    "vue2-google-maps": "^0.10.7"
+    "vue2-google-maps": "^0.10.7",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
